@@ -3,3 +3,6 @@ build 113:
 
 build 115:
 	Add TempLogger4 to log temperature files and cooler state where cooler state is in range of 0-100(%).
+	
+build 116:
+	Try to fix issue of wrongly measured 0.0°C water temperature..
